# veracity

./: .gitignore  .gitmodules  API.md  CLAUDE.md  LICENSE  Makefile  README.md  test.sh
benchmarks/inference_output/: .gitignore
benchmarks/inferred/: array-disjoint.vcy  array1.vcy  array2.vcy  array3.vcy  auction1.vcy  auction2.vcy  auction3.vcy  auction4.vcy  calc.vcy  conditional.vcy  counter.vcy  dict.vcy  dot-product.vcy  even-odd.vcy  ht-add-put.vcy  (+17 more)
examples/: README.md  accumulator.vcy  array1.vcy  array2.vcy  assert1.vcy  basic4.vcy  basic6.vcy  basic_fail1.vcy  basic_fail2.vcy  busy_wait.vcy  commute_nest.vcy  commute_par3.vcy  crowdfund-speedup.vcy  crowdfund.vcy  files1.vcy  for_loop1.vcy  function1.vcy  function_fail1.vcy  hashset.vcy  hashtable1.vcy  hashtable2.vcy  hashtable3.vcy  hashtable4.vcy  linear_operators.vcy  simple.vcy  speedup_test3.vcy  struct1.vcy  struct2.vcy
reports/: .gitignore  bench_all.sh  infer_verif_gen.py  inference_gen.py  speedup_gen.py
src/: .gitignore  .merlin  Makefile  dune  dune-project
src/analysis/: .merlin  analyze.ml  interface.ml  model_table.ml  spec_generator.ml
src/api/: veracity.ml  veracity.mli
src/parallel/: Makefile  parallel.mli  parallel_multicore.ml  parallel_singlecore.ml
src/test/: .merlin  api_test.ml  dune  test.ml
src/util/: .merlin  Makefile  concurrent_counter.ml  concurrent_counter.mli  driver.ml  hashtables.ml  range.ml  util.ml
src/vcy/: .merlin  Makefile  ast.ml  ast_print.ml  ast_to_c.ml  dune  html_output.ml  interp.ml  invariants.ml  run.ml  vcy_lexer.mll  vcy_parser.mly  vcylib.ml
(+108 files in other folders)
