(include_subdirs unqualified)

(library
 (name vcy)
 (public_name vcy)
 (libraries unix threads str servois2
            (select parallel.ml from
             (domainslib -> parallel/parallel_multicore.ml)
             (-> parallel/parallel_singlecore.ml)))
 (modules (:standard \ parallel_multicore parallel_singlecore run))
 (wrapped true)
 (library_flags -linkall)
 (synopsis "Veracity language"))
 
(executable
 (name run)
 (modules run)
 (libraries vcy))

(env
 (dev
  (flags (:standard -warn-error -A -w -27-33 ))))
